--- a/jwang/notes2/co-sim_ieee39_ev_RURD.ipynb
+++ b/jwang/notes2/co-sim_ieee39_ev_RURD.ipynb
@@ -194,11 +194,11 @@
      "text": [
       "Saved generated pycode to \"/home/jwang175/.andes/pycode\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
-      "Generated numerical code for 1 models in 0.2520 seconds.\n",
+      "Generated numerical code for 1 models in 0.2526 seconds.\n",
       "Parsing input file \"/home/jwang175/andes/jwang/case/ieee39_ev2.xlsx\"...\n",
-      "Input file parsed in 0.0918 seconds.\n",
+      "Input file parsed in 0.1091 seconds.\n",
       "ACEc <1> added BusFreq <BusFreq_11> linked to bus <1>\n",
-      "System internal structure set up in 0.0481 seconds.\n"
+      "System internal structure set up in 0.0464 seconds.\n"
      ]
     },
     {
@@ -433,13 +433,13 @@
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
       "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.1077 seconds.\n",
+      "Power flow initialized in 0.1049 seconds.\n",
       "0: |F(x)| = 7.561249598\n",
       "1: |F(x)| = 2.916599385\n",
       "2: |F(x)| = 0.1314306449\n",
       "3: |F(x)| = 0.000346374201\n",
       "4: |F(x)| = 4.221393901e-09\n",
-      "Converged in 5 iterations in 0.0087 seconds.\n",
+      "Converged in 5 iterations in 0.0091 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n"
      ]
     },
@@ -791,13 +791,13 @@
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
       "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.0080 seconds.\n",
+      "Power flow initialized in 0.0061 seconds.\n",
       "0: |F(x)| = 7.561249598\n",
       "1: |F(x)| = 2.916599385\n",
       "2: |F(x)| = 0.1314306449\n",
       "3: |F(x)| = 0.000346374201\n",
       "4: |F(x)| = 4.221393901e-09\n",
-      "Converged in 5 iterations in 0.0081 seconds.\n",
+      "Converged in 5 iterations in 0.0065 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n",
       "GSF is consistent.\n"
      ]
@@ -830,7 +830,7 @@
       "  Bounds range     [4e-01, 3e+01]\n",
       "  RHS range        [6e+01, 2e+03]\n",
       "Presolve removed 69 rows and 11 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
       "       0    6.0389157e+01   0.000000e+00   0.000000e+00      0s\n",
@@ -1108,7 +1108,7 @@
       "  Bounds range     [4e-01, 3e+01]\n",
       "  RHS range        [6e+01, 2e+03]\n",
       "Presolve removed 69 rows and 11 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
       "       0    6.0389157e+01   0.000000e+00   0.000000e+00      0s\n",
@@ -1688,8 +1688,8 @@
    "source": [
     "# --- co-sim constants ---\n",
     "\n",
-    "rru = 0.0   # RegUp rate of EV\n",
-    "rrd = 0.0   # RegDn rate of EV\n",
+    "rru = 1.0   # RegUp rate of EV\n",
+    "rrd = 0.5   # RegDn rate of EV\n",
     "rsfr = 0.1  # ratio of SFR reserve out of total load\n",
     "\n",
     "t_total = 3600    # total simulation time\n",
@@ -1821,7 +1821,7 @@
       "  Bounds range     [4e-01, 3e+01]\n",
       "  RHS range        [6e+01, 2e+03]\n",
       "Presolve removed 69 rows and 11 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
       "       0    6.2930266e+01   0.000000e+00   0.000000e+00      0s\n",
@@ -1846,22 +1846,22 @@
       "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (linux64)\n",
       "Thread count: 6 physical cores, 12 logical processors, using up to 12 threads\n",
       "Optimize a model with 117 rows, 33 columns and 685 nonzeros\n",
-      "Model fingerprint: 0x61609702\n",
+      "Model fingerprint: 0xb3e0257e\n",
       "Coefficient statistics:\n",
       "  Matrix range     [4e-03, 1e+00]\n",
       "  Objective range  [1e-01, 2e+00]\n",
       "  Bounds range     [4e-01, 3e+01]\n",
-      "  RHS range        [4e-01, 2e+03]\n",
-      "Presolve removed 100 rows and 7 columns\n",
-      "Presolve time: 0.01s\n",
-      "Presolved: 17 rows, 26 columns, 54 nonzeros\n",
+      "  RHS range        [1e-02, 2e+03]\n",
+      "Presolve removed 107 rows and 14 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolved: 10 rows, 19 columns, 35 nonzeros\n",
       "\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    6.4152368e+01   4.162500e+00   0.000000e+00      0s\n",
-      "       1    6.4152368e+01   0.000000e+00   0.000000e+00      0s\n",
+      "       0    6.4151146e+01   5.130732e+00   0.000000e+00      0s\n",
+      "       2    6.4151756e+01   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved in 1 iterations and 0.01 seconds (0.00 work units)\n",
-      "Optimal objective  6.415236840e+01\n"
+      "Solved in 2 iterations and 0.01 seconds (0.00 work units)\n",
+      "Optimal objective  6.415175620e+01\n"
      ]
     },
     {
@@ -1879,13 +1879,13 @@
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
       "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.0074 seconds.\n",
+      "Power flow initialized in 0.0061 seconds.\n",
       "0: |F(x)| = 7.959020157\n",
       "1: |F(x)| = 3.636894196\n",
       "2: |F(x)| = 0.209084611\n",
       "3: |F(x)| = 0.0009902656015\n",
       "4: |F(x)| = 4.145843757e-08\n",
-      "Converged in 5 iterations in 0.0109 seconds.\n",
+      "Converged in 5 iterations in 0.0063 seconds.\n",
       "Numba compilation initiated with caching.\n",
       "GENROU (xl <= xd2) out of typical upper limit.\n",
       "\n",
@@ -1901,7 +1901,7 @@
       " GENROU_10 | 0.013  | 0.000\n",
       "\n",
       "\n",
-      "Initialization for dynamics completed in 0.3039 seconds.\n",
+      "Initialization for dynamics completed in 0.3048 seconds.\n",
       "Initialization was successful.\n",
       "\n",
       "-> Time Domain Simulation Summary:\n",
@@ -1915,12 +1915,57 @@
       "Simulation time: 0.0-1 s.\n",
       "Fixed step size: h=33.33 ms. Shrink if not converged.\n",
       "Current step size is zero. Integration is not permitted.\n",
-      "Simulation to t=1.00 sec completed in 0.0694 seconds.\n",
-      "Simulation to t=2.00 sec completed in 0.0633 seconds.\n",
-      "Simulation to t=3.00 sec completed in 0.0673 seconds.\n",
-      "Simulation to t=4.00 sec completed in 0.0661 seconds.\n",
-      "Simulation to t=5.00 sec completed in 0.0662 seconds.\n",
-      "Simulation to t=6.00 sec completed in 0.0683 seconds.\n"
+      "Simulation to t=1.00 sec completed in 0.0674 seconds.\n",
+      "Simulation to t=2.00 sec completed in 0.0636 seconds.\n",
+      "Simulation to t=3.00 sec completed in 0.0672 seconds.\n",
+      "Simulation to t=4.00 sec completed in 0.0681 seconds.\n",
+      "Simulation to t=5.00 sec completed in 0.0672 seconds.\n",
+      "Simulation to t=6.00 sec completed in 0.0670 seconds.\n",
+      "Simulation to t=7.00 sec completed in 0.0670 seconds.\n",
+      "Simulation to t=8.00 sec completed in 0.0678 seconds.\n",
+      "Simulation to t=9.00 sec completed in 0.0669 seconds.\n",
+      "Simulation to t=10.00 sec completed in 0.0676 seconds.\n",
+      "Simulation to t=11.00 sec completed in 0.0679 seconds.\n",
+      "Simulation to t=12.00 sec completed in 0.0710 seconds.\n",
+      "Simulation to t=13.00 sec completed in 0.0785 seconds.\n",
+      "Simulation to t=14.00 sec completed in 0.0674 seconds.\n",
+      "Simulation to t=15.00 sec completed in 0.0682 seconds.\n",
+      "Simulation to t=16.00 sec completed in 0.0676 seconds.\n",
+      "Simulation to t=17.00 sec completed in 0.0645 seconds.\n",
+      "Simulation to t=18.00 sec completed in 0.0641 seconds.\n",
+      "Simulation to t=19.00 sec completed in 0.0642 seconds.\n",
+      "Simulation to t=20.00 sec completed in 0.0658 seconds.\n",
+      "Simulation to t=21.00 sec completed in 0.0648 seconds.\n",
+      "Simulation to t=22.00 sec completed in 0.0644 seconds.\n",
+      "Simulation to t=23.00 sec completed in 0.0655 seconds.\n",
+      "Simulation to t=24.00 sec completed in 0.0667 seconds.\n",
+      "Simulation to t=25.00 sec completed in 0.0647 seconds.\n",
+      "Simulation to t=26.00 sec completed in 0.0646 seconds.\n",
+      "Simulation to t=27.00 sec completed in 0.0646 seconds.\n",
+      "Simulation to t=28.00 sec completed in 0.0647 seconds.\n",
+      "Simulation to t=29.00 sec completed in 0.0648 seconds.\n",
+      "Simulation to t=30.00 sec completed in 0.0649 seconds.\n",
+      "Simulation to t=31.00 sec completed in 0.0644 seconds.\n",
+      "Simulation to t=32.00 sec completed in 0.0645 seconds.\n",
+      "Simulation to t=33.00 sec completed in 0.0669 seconds.\n",
+      "Simulation to t=34.00 sec completed in 0.0668 seconds.\n",
+      "Simulation to t=35.00 sec completed in 0.0675 seconds.\n",
+      "Simulation to t=36.00 sec completed in 0.0688 seconds.\n",
+      "Simulation to t=37.00 sec completed in 0.0677 seconds.\n",
+      "Simulation to t=38.00 sec completed in 0.0673 seconds.\n",
+      "Simulation to t=39.00 sec completed in 0.0676 seconds.\n",
+      "Simulation to t=40.00 sec completed in 0.0686 seconds.\n",
+      "Simulation to t=41.00 sec completed in 0.0671 seconds.\n",
+      "Simulation to t=42.00 sec completed in 0.0669 seconds.\n",
+      "Simulation to t=43.00 sec completed in 0.0669 seconds.\n",
+      "Simulation to t=44.00 sec completed in 0.0680 seconds.\n",
+      "Simulation to t=45.00 sec completed in 0.0671 seconds.\n",
+      "Simulation to t=46.00 sec completed in 0.0679 seconds.\n",
+      "Simulation to t=47.00 sec completed in 0.0676 seconds.\n",
+      "Simulation to t=48.00 sec completed in 0.0688 seconds.\n",
+      "Simulation to t=49.00 sec completed in 0.0678 seconds.\n",
+      "Simulation to t=50.00 sec completed in 0.0677 seconds.\n",
+      "Simulation to t=51.00 sec completed in 0.0674 seconds.\n"
      ]
     }
    ],
@@ -2162,6 +2207,11 @@
     "                 ylabel='p.u.',\n",
     "                 fig=fig_gen, ax=ax_gen[0, 1])\n",
     "\n",
+    "# Plot EV AGC response, hard code\n",
+    "ax_gen[0, 1].plot(3600*(np.array(sse.tss)-10), sse.Prl, color='tab:orange', linestyle=':')\n",
+    "ax_gen[0, 1].plot(3600*(np.array(sse.tss)-10), sse.Prcl, color='tab:orange', linestyle='-')\n",
+    "ax_gen[0, 1].set_ylim(top=max(sse.Prl) * 1.2)\n",
+    "\n",
     "sfr_res_plot = sfr_res.drop(['cat'], axis=1).T\n",
     "sfr_res_plot.columns = sfr_res['cat'].values\n",
     "ax_gen[0, 2].plot(sfr_res_plot.time, sfr_res_plot['ace'],\n",
@@ -2207,7 +2257,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soc_plot = ev_soc\n",
+    "sse.plot_agc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complement AGC table\n",
+    "agc_out = pd.DataFrame(np.repeat(agc_res[list(np.arange(0, t_total, 4))].values, 4, axis=1),\n",
+    "                       columns=list(np.arange(0, t_total, 1)))\n",
+    "\n",
+    "# Record output\n",
+    "sse_out = pd.DataFrame()\n",
+    "sse_out['time'] = sse.tss\n",
+    "sse_out['agc'] = agc_out.iloc[10]  # AGC input to EV\n",
+    "sse_out['Pr'] = sse.Prl\n",
+    "sse_out['Prc'] = sse.Prcl\n",
+    "sse_out.to_csv('sse_out.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soc_plot = ev_soc[ev_agc.abs().sum(axis=1) > 0].reset_index(drop=True)\n",
     "soc_plot = soc_plot[list(range(end_time+1))]\n",
     "\n",
     "fig_soc, ax_soc = plt.subplots(figsize=(5, 4))\n",
