--- a/jwang/jams/test_rted.ipynb
+++ b/jwang/jams/test_rted.ipynb
@@ -19,9 +19,10 @@
    "source": [
     "import andes\n",
     "import pandapower as pp\n",
-    "from jams import dcopf, rted, rted2\n",
+    "from jams import dcbase, dcopf, rted, rted2\n",
     "\n",
     "from andes.interop.pandapower import build_group_table, add_gencost, make_GSF\n",
+    "from andes.interop.pandapower import to_pandapower, add_gencost\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -36,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.6.5.post34.dev0+gdadaeb63\n",
+      "1.7.2.post256.dev0+g6a131897\n",
       "2.8.0\n"
      ]
     }
@@ -55,141 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Restricted license - for non-production use only - expires 2023-10-25\n",
-      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n"
+      "Generating code for 1 models on 8 processes.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Successfully build DCOPF model.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (mac64[arm])\n",
-      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 35 rows, 5 columns and 135 nonzeros\n",
-      "Model fingerprint: 0x143f50a9\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [4e-04, 1e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [1e+00, 3e+00]\n",
-      "  RHS range        [3e+00, 2e+01]\n",
-      "Presolve removed 35 rows and 5 columns\n",
-      "Presolve time: 0.00s\n",
-      "Presolve: All rows and columns removed\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    2.5900000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
-      "Optimal objective  2.590000000e+00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No RegUp cost data (``cru`` in ``cost``), set to 0.\n",
-      "No RegDn cost data(``crd`` in ``cost``), set to 0.\n",
-      "No RegUp requirement data (``du``), set to 0.\n",
-      "No RegDn requirement data (``dd``), set to 0.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
-      "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (mac64[arm])\n",
-      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 57 rows, 15 columns and 175 nonzeros\n",
-      "Model fingerprint: 0x8f084128\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [4e-04, 1e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [1e+00, 3e+00]\n",
-      "  RHS range        [1e+00, 1e+02]\n",
-      "Presolve removed 57 rows and 15 columns\n",
-      "Presolve time: 0.00s\n",
-      "Presolve: All rows and columns removed\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    2.5900000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
-      "Optimal objective  2.590000000e+00\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gen</th>\n",
-       "      <th>pg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   gen    pg\n",
-       "0    2  0.59\n",
-       "1    3  1.00\n",
-       "2    4  1.00\n",
-       "3    5  0.00\n",
-       "4    1  0.00"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -200,14 +68,7 @@
     "ssa = andes.load(case,\n",
     "                setup=True,\n",
     "                no_output=True,\n",
-    "                default_config=False)\n",
-    "build_group_table(ssa, 'StaticGen', ['u', 'idx', 'p0'])\n",
-    "\n",
-    "ssd = rted()\n",
-    "ssd.from_andes(ssa)\n",
-    "ssd.build()\n",
-    "ssd.mdl.optimize()\n",
-    "ssd.get_res()"
+    "                default_config=False)"
    ]
   },
   {
@@ -219,71 +80,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n"
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2023-04-08\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Successfully build DCOPF model.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (mac64[arm])\n",
-      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 35 rows, 5 columns and 135 nonzeros\n",
-      "Model fingerprint: 0x143f50a9\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [4e-04, 1e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [1e+00, 3e+00]\n",
-      "  RHS range        [3e+00, 2e+01]\n",
-      "Presolve removed 35 rows and 5 columns\n",
-      "Presolve time: 0.00s\n",
-      "Presolve: All rows and columns removed\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    2.5900000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
-      "Optimal objective  2.590000000e+00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No RegUp cost data (``cru`` in ``cost``), set to 0.\n",
-      "No RegDn cost data(``crd`` in ``cost``), set to 0.\n",
-      "No RegUp requirement data (``du``), set to 0.\n",
-      "No RegDn requirement data (``dd``), set to 0.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
-      "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (mac64[arm])\n",
-      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 59 rows, 15 columns and 175 nonzeros\n",
-      "Model fingerprint: 0xeb37466d\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [4e-04, 1e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [1e+00, 3e+00]\n",
-      "  RHS range        [1e+00, 1e+02]\n",
-      "Presolve removed 59 rows and 15 columns\n",
-      "Presolve time: 0.00s\n",
-      "Presolve: All rows and columns removed\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    2.5900000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
-      "Optimal objective  2.590000000e+00\n"
+      "DCOPF has no cost data, default cost data is set.\n",
+      "DCOPF GB model is loaded.\n",
+      "DCOPF is solved.\n"
      ]
     },
     {
@@ -355,6 +162,374 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "ssd = dcopf(name=\"DCOPF\", OutputFlag=0)\n",
+    "ssd.from_andes(ssa)\n",
+    "ssd.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DCOPF GB model is loaded.\n",
+      "DCOPF solved to 3, please check.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gen</th>\n",
+       "      <th>pg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gen  pg\n",
+       "0    2   0\n",
+       "1    3   0\n",
+       "2    4   0\n",
+       "3    5   0\n",
+       "4    1   0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssd.load.p0 *= 4\n",
+    "ssd.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DCOPF diagnostic process:\n",
+      "DCOPF is infeasible.\n",
+      "Overload by 34.13%.\n",
+      "DCOPF GB model is loaded.\n",
+      "Scale load to 74.0% CAN address it.\n",
+      "DCOPF IISConstrs: [<gurobi.Constr pb>]\n",
+      "DCOPF IISUB: [<gurobi.Var pg[0]>, <gurobi.Var pg[1]>, <gurobi.Var pg[2]>, <gurobi.Var pg[3]>, <gurobi.Var pg[4]>]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssd.diagnostic()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd = rted(name=\"RTED\")\n",
+    "ssd.from_andes(ssa)\n",
+    "ssd.build()\n",
+    "ssd.mdl.optimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = ssd.mdl.getConstrs()\n",
+    "ssd.mdl.remove(c[0])\n",
+    "ssd.mdl.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.mdl.remove(ssd.llu)\n",
+    "ssd.mdl.optimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.mdl.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.rampu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.mdl.getVars()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.build()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equal.all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.mdl.Status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.mdl.optimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.mdl.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.mdl.remove('0_U')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "self = ssd\n",
+    "\n",
+    "mdl = self.mdl\n",
+    "\n",
+    "\n",
+    "ptotal = self.load.p0.sum()\n",
+    "\n",
+    "gendict = self.gendict\n",
+    "linedict = self.linedict\n",
+    "gen_gsfdict = self.gen_gsfdict\n",
+    "\n",
+    "GEN = gendict.keys()\n",
+    "LINE = linedict.keys()\n",
+    "\n",
+    "# --- power balance ---\n",
+    "p_sum = sum(self.pg[gen] for gen in GEN)\n",
+    "self.cpb = mdl.addConstr(p_sum == ptotal, name='PowerBalance')\n",
+    "\n",
+    "\n",
+    "lhs = {}\n",
+    "for line in LINE:\n",
+    "    lhs[line] = sum(self.pg[gen] * gen_gsfdict[gen][line] for gen in GEN)\n",
+    "\n",
+    "self.clu = mdl.addConstrs((lhs[line]+linedict[line]['sup'] <= linedict[line]['rate_a'] for line in LINE),\n",
+    "                name='LineLimU')\n",
+    "\n",
+    "# for line in LINE:\n",
+    "#     lhs1 = sum(self.pg[gen] * gen_gsfdict[gen][line] for gen in GEN)\n",
+    "#     mdl.addConstr(lhs1+linedict[line]['sup'] <= linedict[line]['rate_a'], name=f'{line}_U')\n",
+    "#     mdl.addConstr(lhs1+linedict[line]['sup'] >= -linedict[line]['rate_a'], name=f'{line}_D')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lhs = {}\n",
+    "for line in LINE:\n",
+    "    lhs[line] = sum(self.pg[gen] * gen_gsfdict[gen][line] for gen in GEN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lhs1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.mdl.Status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.gen0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdl_df['idx'].isin(idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = [2]\n",
+    "src = ['ramp_agc']\n",
+    "for col in src:\n",
+    "    ssd.gen[col][ssd.gen.idx.isin(idx)] = 9999\n",
+    "ssd.gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssd.gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {1: 'a', 2: 'b', 3: 'c'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ssd = rted2()\n",
     "ssd.from_andes(ssa)\n",
